Merge responseArgumentsMap with conditionChecks and create data type ResponseData